code/human_written_tests/WebAssembly/processed_control_flow_validation/test_if_78.wast
(assert_invalid
  (module
    (func $type-condition-empty
      (if (then))
    )
  )
  "type mismatch"
)